Repair horizontal scrolling for wide html.

--- a/static/style.css
+++ b/static/style.css
@@ -111,10 +111,10 @@ body {
 }
 
 .root main {
-	/* max-width: calc(100% - 20em); */
 	display: flex;
 	flex-direction: column;
         flex-grow: 1;
+        min-width: 0;
 }
 
 /* ---------------------------------------- */
